# ha-pecron

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  RELEASE.md  hacs.json  pyproject.toml  requirements-dev.txt
.beads/: issues.jsonl
.github/workflows/: ci.yaml  hacs.yaml  hassfest.yaml  release.yaml
custom_components/pecron/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  select.py  sensor.py  services.yaml  strings.json  switch.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_const.py  test_init.py  test_time_sensors.py  test_token_refresh.py
